crates/biome_js_type_info/snapshots/infer_flattened_type_from_chained_invocation_of_promise_returning_function.snap
---
source: crates/biome_js_type_info/tests/utils.rs
expression: content
---
```ts
function returnsPromise(): Promise<number> {
	return Promise.resolved(true);
}

returnsPromise().then(() => {});

```

```
instanceof Promise
```

## Registered types:

Module TypeId(0) => sync Function "returnsPromise" {
  accepts: {
    params: []
    type_args: []
  }
  returns: Module TypeId(4)
}

Module TypeId(1) => instanceof Promise<T = number>

Module TypeId(2) => sync Function "then" {
  accepts: {
    params: []
    type_args: []
  }
  returns: Promise
}

Module TypeId(3) => sync Function {
  accepts: {
    params: []
    type_args: []
  }
  returns: unknown reference
}

Module TypeId(4) => instanceof Promise<T = number>

Module TypeId(5) => sync Function "then" {
  accepts: {
    params: []
    type_args: []
  }
  returns: Promise
}
