crates/biome_js_type_info/snapshots/infer_flattened_type_from_static_promise_function.snap
---
source: crates/biome_js_type_info/tests/utils.rs
expression: content
---
```ts
Promise.resolve("value");

```

```
instanceof Promise
```

## Registered types:

Global TypeId(6) => sync Function "resolve" {
  accepts: {
    params: []
    type_args: []
  }
  returns: Promise
}

Global TypeId(7) => value: value

Global TypeId(8) => sync Function "resolve" {
  accepts: {
    params: []
    type_args: []
  }
  returns: Promise
}
