crates/biome_js_type_info/snapshots/infer_resolved_type_from_double_chained_invocation_of_promise_returning_function.snap
---
source: crates/biome_js_type_info/tests/utils.rs
expression: content
---
```ts
function returnsPromise(): Promise<number> {
	return Promise.resolved(true);
}

returnsPromise()
	.then(() => {})
	.finally(() => {});

```

```
Call Module TypeId(5)(Module TypeId(3))
```

## Registered types:

Module TypeId(0) => sync Function "returnsPromise" {
  accepts: {
    params: []
    type_args: []
  }
  returns: Module TypeId(6)
}

Module TypeId(1) => Call Module TypeId(0)(No parameters)

Module TypeId(2) => Module TypeId(1).then

Module TypeId(3) => sync Function {
  accepts: {
    params: []
    type_args: []
  }
  returns: unknown reference
}

Module TypeId(4) => Call Module TypeId(2)(Module TypeId(3))

Module TypeId(5) => Module TypeId(4).finally

Module TypeId(6) => instanceof Promise<T = number>
