crates/biome_js_type_info/snapshots/infer_resolved_type_from_invocation_of_promise_returning_function.snap
---
source: crates/biome_js_type_info/tests/utils.rs
expression: content
---
```ts
function returnsPromise(): Promise<number> {
	return Promise.resolved(true);
}

returnsPromise();

```

```
Call Module TypeId(0)(No parameters)
```

## Registered types:

Module TypeId(0) => sync Function "returnsPromise" {
  accepts: {
    params: []
    type_args: []
  }
  returns: Module TypeId(1)
}

Module TypeId(1) => instanceof Promise<T = number>
